--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,5 @@
-site_name: My Docs
+site_name: PyMasterMind
+theme: readthedocs
+nav:
+  - Quick Start: README.md
+  - Documentation: documentation.md
